kubernetes/base/zookeeper_kafka_deployment.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: zookeeper-deployment-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper-1
  template:
    metadata:
      labels:
        app: zookeeper-1
    spec:
      containers:
        - name: zoo1
          image: wurstmeister/zookeeper:3.4.6
          ports:
            - containerPort: 2181
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-broker0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
        id: "0"
    spec:
      containers:
        - name: kafka
          image: wurstmeister/kafka:2.12-2.1.0
          ports:
            - containerPort: 9092
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-cat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-cat
  template:
    metadata:
      labels:
        app: kafka-cat
    spec:
      containers:
        - name: kafka-cat
          image: confluentinc/cp-kafkacat
          command: ["/bin/sh"]
          args: ["-c", "trap : TERM INT; sleep infinity & wait"]
