kubernetes/base/auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    app: auth
    service: auth
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: auth
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-v1
  labels:
    app: auth
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
      version: v1
  template:
    metadata:
      labels:
        app: auth
        version: v1
    spec:
      serviceAccountName: streetvendor-auth
      containers:
        - name: auth
          image: holicker0601/auth:0.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 350Mi
