kubernetes/base/chat-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  labels:
    app: chat
    service: chat
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: chat
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-v1
  labels:
    app: chat
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
      version: v1
  template:
    metadata:
      labels:
        app: chat
        version: v1
    spec:
      serviceAccountName: streetvendor-chat
      containers:
        - name: chat
          image: holicker0601/chat-grpc:0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 350Mi
