kubernetes/base/detail.yaml
apiVersion: v1
kind: Service
metadata:
  name: detail-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:ap-northeast-2:068149769006:certificate/dde95b2e-4ad3-4a67-8759-a81896270272
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "3600"
  labels:
    app: detail
    service: detail
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http2
    - port: 443
      targetPort: 443
      name: http2
  selector:
    app: detail
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: detail-v1
  labels:
    app: detail
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: detail
      version: v1
  template:
    metadata:
      labels:
        app: detail
        version: v1
    spec:
      serviceAccountName: streetvendor-detail
      containers:
        - name: detail
          image: holicker0601/detail:0.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 350Mi
