kubernetes/base/front.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
  labels:
    app: front
    service: front
spec:
  ports:
    - port: 3000
      name: http
    - port: 443
      name: https
      targetPort: 443
  selector:
    app: front
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-v1
  labels:
    app: front
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
      version: v1
  template:
    metadata:
      labels:
        app: front
        version: v1
    spec:
      serviceAccountName: streetvendor-front
      containers:
        - name: front
          image: holicker0601/front:0.9
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: 350Mi
