kubernetes/base/notice.yaml
apiVersion: v1
kind: Service
metadata:
  name: notice
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
  labels:
    app: notice
    service: notice
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: notice
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notice-v1
  labels:
    app: notice
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notice
      version: v1
  template:
    metadata:
      labels:
        app: notice
        version: v1
    spec:
      serviceAccountName: streetvendor-notice
      containers:
      - name: notice
        image: holicker0601/notice:final
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 350Mi
        volumeMounts:
        - name: config-repo-volume
          mountPath: /config
      volumes:
      - name: config-repo-volume
        configMap:
          name: config-repo
