kubernetes/base/qna.yaml
apiVersion: v1
kind: Service
metadata:
  name: qna
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
  labels:
    app: qna
    service: qna
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: qna
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qna-v1
  labels:
    app: qna
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qna
      version: v1
  template:
    metadata:
      labels:
        app: qna
        version: v1
    spec:
      serviceAccountName: streetvendor-qna
      containers:
      - name: qna
        image: holicker0601/qna:final
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 350Mi
        volumeMounts:
        - name: config-repo-volume
          mountPath: /config
      volumes:
      - name: config-repo-volume
        configMap:
          name: config-repo
