kubernetes/base/review.yaml
apiVersion: v1
kind: Service
metadata:
  name: review
  labels:
    app: review
    service: review
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: review
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-v1
  labels:
    app: review
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review
      version: v1
  template:
    metadata:
      labels:
        app: review
        version: v1
    spec:
      serviceAccountName: streetvendor-review
      containers:
      - name: review
        image: holicker0601/review:final
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 350Mi
        volumeMounts:
        - name: config-repo-volume
          mountPath: /config
      volumes:
      - name: config-repo-volume
        configMap:
          name: config-repo
