kubernetes/base/vendor.yaml
apiVersion: v1
kind: Service
metadata:
  name: vendor
  labels:
    app: vendor
    service: vendor
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: vendor
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vendor-v1
  labels:
    app: vendor
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vendor
      version: v1
  template:
    metadata:
      labels:
        app: vendor
        version: v1
    spec:
      serviceAccountName: streetvendor-vendor
      containers:
      - name: vendor
        image: holicker0601/vendor:0.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 350Mi
        volumeMounts:
        - name: ebs-volume
          mountPath: /images
        - name: config-repo-volume
          mountPath: /config
      volumes:
      - name: ebs-volume
        persistentVolumeClaim:
          claimName: ebs-pvc-hdd   # 3. my-ebs-pvc라는 이름의 pvc를 사용합니다.
      - name: config-repo-volume
        configMap:
          name: config-repo
