kubernetes/base/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: streetvendor-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.streetvendor.co.kr"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTP
      hosts:
        - "*.streetvendor.co.kr"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: streetvendor
spec:
  hosts:
    - "*.streetvendor.co.kr"
  gateways:
    - streetvendor-gateway
  http:
    - match:
        - uri:
            prefix: /app/vendor/
      rewrite:
        uri: /
      route:
        - destination:
            host: vendor
            port:
              number: 80
    - match:
        - uri:
            prefix: /app/chat/
      rewrite:
        uri: /
      route:
        - destination:
            host: chat-service
            port:
              number: 80
    - match:
        - uri:
            prefix: /app/notice/
      rewrite:
        uri: /
      route:
        - destination:
            host: notice
            port:
              number: 80
    - match:
        - uri:
            prefix: /app/qna/
      rewrite:
        uri: /
      route:
        - destination:
            host: qna
            port:
              number: 80
    - match:
        - uri:
            prefix: /app/review/
      rewrite:
        uri: /
      route:
        - destination:
            host: review
            port:
              number: 80
    - route:
        - destination:
            host: front
            port:
              number: 443

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: streetvendor-auth
spec:
  hosts:
    - "*.streetvendor.co.kr"
  gateways:
    - streetvendor-gateway
  http:
    - headers:
        request:
          set:
            Authorization: "Basic cmVhY3Q6c2VjcmV0"
            Content-Type: "application/x-www-form-urlencoded"
      match:
        - uri:
            exact: /app/auth/oauth/token
      rewrite:
        uri: /oauth/token
      route:
        - destination:
            host: auth
            port:
              number: 80
    - match:
        - uri:
            prefix: /app/auth/
      rewrite:
        uri: /
      route:
        - destination:
            host: auth
            port:
              number: 80
